plugins {
    id 'org.springframework.boot' version '2.3.3.RELEASE'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
    id 'idea'
    id 'maven'
}

group = 'br.com.coffeeandit'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()

}

tasks.register("coffeeandit") {
    def propCoffee = 'do CoffeeAndIT'
    doLast {
        println '#################################################################################'
        println ''
        print 'Olá aluno '
        println propCoffee
        println 'Estamos trabalhando agora no projeto ' + rootProject.getName() + '.\nAproveite para contribuir!!! '
        println 'Agora iremos buildar esse projeto no ' + System.getProperty("os.name") + ' na JDK da ' + System.getProperty("java.vendor") + ' / ' + System.getProperty("java.version")
        println ''
        println '#################################################################################'
    }
}

build.dependsOn 'coffeeandit'


bootRun {
   // jvmArgs("--add-modules java.efp.module.main")
    args = ['--add-modules java.efp.module.main']

}

dependencies {
    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'


    compile group: 'org.javamoney.moneta', name: 'moneta-core', version: '1.3'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
    compile group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.4.6'
    compile group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.1.4'

//    implementation 'org.springframework.boot:spring-boot-starter-security'

//    compileOnly 'br.com.coffeeandit:java-efp-module:1.0.0-SNAPSHOT'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.h2database:h2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }

 ///   testImplementation 'br.com.coffeeandit:java-efp-module:1.0.0-SNAPSHOT'
}

//tasks.withType(JavaCompile).each {
//    it.options.compilerArgs.add('--enable-preview')
//}

test {
    useJUnitPlatform()
}
